--- a/src/res/PrimerSearch.css
+++ b/src/res/PrimerSearch.css
@@ -14,17 +14,23 @@ body {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
+/* COMMON RULES */
+
+.v-flex {
+  display: flex;
+  flex-direction: column;
+  min-height: 0;
+}
+
 /* RULES FOR BOTH SECTIONS */
 
 main {
   display: flex;
-  column-gap: 5vw;
+  column-gap: 2vw;
 }
 
 section {
-  display: flex;
-  flex-direction: column;
-  height: 85vh;
+  height: 90vh;
 }
 
 section:first-of-type {
@@ -32,6 +38,10 @@ section:first-of-type {
 }
 
 section:last-of-type {
+  flex: 1;
+}
+
+section:last-of-type > div:last-of-type {
   flex: 1;
 }
 
@@ -48,8 +58,16 @@ h1 {
 }
 
 .footer {
-  display: inline-block;
   margin-top: 0.5rem;
+}
+
+.footer.v-flex {
+  align-items: flex-start;
+  row-gap: 0.25vh;
+}
+
+.footer.v-flex button {
+  width: 12rem;
 }
 
 /* GENE SEQUENCE SECTION */
@@ -58,14 +76,6 @@ h1 {
   padding: 0.5rem;
   border: 1px solid;
   word-break: break-all;
-}
-
-#gene-name {
-  width: 4vw;
-}
-
-label[for="gene-name"] {
-  margin-left: 0.5rem;
 }
 
 .exon:nth-child(even) {
@@ -86,6 +96,21 @@ mark {
 
 .reverse-mark {
   background: var(--reverse-mark-color);
+}
+
+/* CONFIG SECTION */
+
+#gene-name {
+  width: 4vw;
+}
+
+#species {
+  width: 12vw;
+}
+
+#max-product-length {
+  width: 2rem;
+  text-align: center;
 }
 
 /* PRIMER PAIR SECTION */
